tests-system/rbt-mandatory-components/output
T Bar {
  ^^^ rbt-mandatory-components/foo.trlc:3: error: required component b (see foo.rsl:5) is not defined
Processed 1 model and 1 requirement file and found 1 error
